results/SVCOMP/conversational/log-ExSymExeF2I-2024_03_12_15_06_39.txt
class Main {

    //@ requires 0.0f <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result == test(x) || \result == true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Integer.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires x >= 0;
    //@ ensures \result == true ==> \result == true;
    //@ ensures \result == false ==> \result == false;
    public boolean test(float x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2I.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result == test(x) || \result == true;
                           ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result == inst.test(x) || \result == true;
    public static boolean f(float x) {
        Main inst = new Main();
        if (x >= 0.0f && x <= Integer.MAX_VALUE / 2) {
            return inst.test(x);
        }
        return true;
    }

    //@ requires x >= 0;
    //@ ensures \result == true ==> \result == true;
    //@ ensures \result == false ==> \result == false;
    public boolean test(float x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2I.java:4: error: cannot find symbol
    //@ ensures \result == inst.test(x) || \result == true;
                           ^
  symbol:   variable inst
  location: class Main
1 error

class Main {

    //@ requires 0.0f <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result == test(x) || \result == true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Integer.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires x >= 0;
    //@ ensures \result == true ==> \result == true;
    //@ ensures \result == false ==> \result == false;
    public boolean test(float x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2I.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result == test(x) || \result == true;
                           ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result == inst.test(x) || \result == true;
    public static boolean f(float x) {
        Main inst = new Main();
        if (x >= 0.0f && x <= Integer.MAX_VALUE / 2) {
            return inst.test(x);
        }
        return true;
    }

    //@ requires x >= 0;
    //@ ensures \result == true ==> \result == true;
    //@ ensures \result == false ==> \result == false;
    public boolean test(float x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2I.java:4: error: cannot find symbol
    //@ ensures \result == inst.test(x) || \result == true;
                           ^
  symbol:   variable inst
  location: class Main
1 error

class Main {

    //@ requires 0.0f <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result == test(x) || \result == true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Integer.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires x >= 0;
    //@ ensures \result == true ==> \result == true;
    //@ ensures \result == false ==> \result == false;
    public boolean test(float x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2I.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result == test(x) || \result == true;
                           ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result == inst.test(x) || \result == true;
    public static boolean f(float x) {
        Main inst = new Main();
        if (x >= 0.0f && x <= Integer.MAX_VALUE / 2) {
            return inst.test(x);
        }
        return true;
    }

    //@ requires x >= 0;
    //@ ensures \result == true ==> \result == true;
    //@ ensures \result == false ==> \result == false;
    public boolean test(float x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2I.java:4: error: cannot find symbol
    //@ ensures \result == inst.test(x) || \result == true;
                           ^
  symbol:   variable inst
  location: class Main
1 error

class Main {

    //@ requires 0.0f <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result == test(x) || \result == true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Integer.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires x >= 0;
    //@ ensures \result == true ==> \result == true;
    //@ ensures \result == false ==> \result == false;
    public boolean test(float x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2I.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result == test(x) || \result == true;
                           ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result == inst.test(x) || \result == true;
    public static boolean f(float x) {
        Main inst = new Main();
        if (x >= 0.0f && x <= Integer.MAX_VALUE / 2) {
            return inst.test(x);
        }
        return true;
    }

    //@ requires x >= 0;
    //@ ensures \result == true ==> \result == true;
    //@ ensures \result == false ==> \result == false;
    public boolean test(float x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2I.java:4: error: cannot find symbol
    //@ ensures \result == inst.test(x) || \result == true;
                           ^
  symbol:   variable inst
  location: class Main
1 error

class Main {

    //@ requires 0.0f <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result == test(x) || \result == true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Integer.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires x >= 0;
    //@ ensures \result == true ==> \result == true;
    //@ ensures \result == false ==> \result == false;
    public boolean test(float x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2I.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result == test(x) || \result == true;
                           ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result == inst.test(x) || \result == true;
    public static boolean f(float x) {
        Main inst = new Main();
        if (x >= 0.0f && x <= Integer.MAX_VALUE / 2) {
            return inst.test(x);
        }
        return true;
    }

    //@ requires x >= 0;
    //@ ensures \result == true ==> \result == true;
    //@ ensures \result == false ==> \result == false;
    public boolean test(float x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2I.java:4: error: cannot find symbol
    //@ ensures \result == inst.test(x) || \result == true;
                           ^
  symbol:   variable inst
  location: class Main
1 error

